Fixed 3 bugs
1. No more OutOfBoundsxception
2. No more NoSuchElementException
3. No more flickering

But still not stable 30fps

Co-Authored-By: Sofia Tkachenko <duck.shelter@gmail.com>